@@ -21,6 +21,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 public class ExtractionPortBlockEntity extends RefBlockEntity implements MenuProvider, WorldlyContainer {
@@ -52,7 +53,7 @@ public class ExtractionPortBlockEntity extends RefBlockEntity implements MenuPro
     }
 
     @Override
-    public Component getDisplayName() {
+    public @NotNull Component getDisplayName() {
         return Component.translatable(getBlockState().getBlock().getDescriptionId());
     }
 
@@ -86,18 +87,18 @@ public class ExtractionPortBlockEntity extends RefBlockEntity implements MenuPro
     }
 
     @Override
-    public ItemStack getItem(int slot) {
+    public @NotNull ItemStack getItem(int slot) {
         return slot == 0 ? buffer : ItemStack.EMPTY;
     }
 
     @Override
-    public ItemStack removeItem(int slot, int amount) {
+    public @NotNull ItemStack removeItem(int slot, int amount) {
         setChanged();
         return slot == 0 ? buffer.split(amount) : ItemStack.EMPTY;
     }
 
     @Override
-    public ItemStack removeItemNoUpdate(int slot) {
+    public @NotNull ItemStack removeItemNoUpdate(int slot) {
         if (slot != 0) {
             return ItemStack.EMPTY;
         }
@@ -126,7 +127,7 @@ public class ExtractionPortBlockEntity extends RefBlockEntity implements MenuPro
     }
 
     @Override
-    public int[] getSlotsForFace(Direction side) {
+    public int @NotNull [] getSlotsForFace(Direction side) {
         return new int[] {0};
     }
 
@@ -155,7 +156,7 @@ public class ExtractionPortBlockEntity extends RefBlockEntity implements MenuPro
 
         final NonNullList<ItemStack> list = NonNullList.withSize(1, ItemStack.EMPTY);
         ContainerHelper.loadAllItems(nbt, list);
-        buffer = list.get(0);
+        buffer = list.getFirst();
 
         extractList.fromTag(nbt.getList("ExtractList", Tag.TAG_COMPOUND));
     }
